@@ -106,6 +106,7 @@
 #include "ccxResultConvertJobCommand.hpp"
 #include "ccxResultPlotJobFrdCommand.hpp"
 #include "ccxResultPlotJobDatCommand.hpp"
+#include "ccxResultCSVJobFrdCommand.hpp"
 #include "ccxResultProjectJobCommand.hpp"
 #include "ccxKillJobCommand.hpp"
 #include "ccxCustomLineCreateCommand.hpp"
@@ -233,6 +234,7 @@ std::vector<std::string> CalculiXPlugin::get_keys()
   keys.push_back("ccxResultConvertJobCommand");
   keys.push_back("ccxResultPlotJobFrdCommand");
   keys.push_back("ccxResultPlotJobDatCommand");
+  keys.push_back("ccxResultCSVJobFrdCommand");
   keys.push_back("ccxResultProjectJobCommand");
   keys.push_back("ccxCustomLineCreateCommand");
   keys.push_back("ccxCustomLineModifyCommand");
@@ -563,6 +565,9 @@ CubitCommand* CalculiXPlugin::create_command(const std::string &key)
 
   else if(key == "ccxResultPlotJobDatCommand")
     return new ccxResultPlotJobDatCommand();
+
+  else if(key == "ccxResultCSVJobFrdCommand")
+    return new ccxResultCSVJobFrdCommand();
 
   else if(key == "ccxKillJobCommand")
     return new ccxKillJobCommand();
