@@ -40,6 +40,11 @@ bool CalculiXCoreInterface::log_str(std::string str_log)
   return true;
 }
 
+bool CalculiXCoreInterface::export_to_csv(std::string path, std::vector<std::string> header, std::vector<std::vector<double>> data)
+{
+  return ccx_core.export_to_csv(path, header, data);
+}
+
 std::vector<int> CalculiXCoreInterface::parser(std::string parse_type, std::string parse_string)
 {
   return ccx_core.parser(parse_type, parse_string);
@@ -600,6 +605,11 @@ bool CalculiXCoreInterface::result_plot_job_dat(int job_id)
   return ccx_core.result_plot_job_dat(job_id);
 }
 
+bool CalculiXCoreInterface::result_csv_job_frd(int job_id,int x_node_id, std::string x_block_type, std::string x_block_component, bool x_increment,bool x_time,int y_node_id, std::string y_block_type, std::string y_block_component, bool y_increment, bool y_time,QString title,QString x_axis,QString y_axis,bool save, QString save_filepath)
+{
+  return ccx_core.result_csv_job_frd(job_id,x_node_id,x_block_type,x_block_component,x_increment,x_time,y_node_id,y_block_type,y_block_component,y_increment,y_time,title,x_axis,y_axis,save, save_filepath);
+}
+
 std::vector<std::string> CalculiXCoreInterface::get_job_data(int job_id)
 {
   return ccx_core.get_job_data(job_id);
@@ -828,11 +838,6 @@ bool CalculiXCoreInterface::draw_bc_displacements(double size)
 bool CalculiXCoreInterface::draw_bc_temperatures(double size)
 {
   return ccx_core.draw_bc_temperatures(size);
-}
-
-bool CalculiXCoreInterface::export_to_csv(std::string path, std::vector<std::string> header, std::vector<std::vector<double>> data)
-{
-  return ccx_core.export_to_csv(path, header, data);
 }
 
 std::vector<int> CalculiXCoreInterface::frd_get_nodes(int job_id)
